     view. Keybindings are precious!
   - Make `shr' the default renderer for rich-text emails
   - Allow for resending existing messages, possibly editing them. M-x
     mu4e-compose-resend, or use the menu; no shortcut.
   - Let `mu4e~read-char-choice' become case-insensitive if there is
     no exact match; small convenience that affects most the
     single-char option reading in mu4e.
             
** 0.9.16

*** Release

    2016-01-20: Release from the 0.9.15 series

*** Contributors:

     Adam Sampson, Ævar Arnfjörð Bjarmason, Bar Shirtcliff,
     Charles-H. Schulz, Clément Pit--Claudel, Damien Cassou, Declan
     Qian, Dima Kogan, Dirk-Jan C. Binnema, Foivos S. Zakkak, Hinrik
     Örn Sigurðsson, Jeroen Tiebout, JJ Asghar, Jonas Bernoulli, Jun
     Hao, Martin Yrjölä, Maximilian Matthé, Piotr Trojanek, prsarv,
     Thierry Volpiatto, Titus von der Malsburg

     (and of course all people who reported issues, provided
     suggestions etc.)
     
** 0.9.15

   - bump version to 0.9.15. From now on, odd minor version numbers
     are for development versions; thus, 0.9.16 is to be the next
     stable release.
   - special case text/calendar attachements to get .vcs
     extensions. This makes it easier to process those with external
     tools.
   - change the message file names to better conform to the maildir
     spec; this was confusing some tools.
   - fix navigation when not running in split-view mode
   - add `mu4e-view-body-face', so the body-face for message in the
     view can be customized; e.g.  (set-face-attribute
     'mu4e-view-body-face nil :font "Liberation Serif-10")
   - add `mu4e-action-show-thread`, an action for the headers and view
     buffers to search for messages in the same thread as the current
     one.
   - allow for transforming mailing-list names for display, using
     `mu4e-mailing-list-patterns'.
   - some optimizations in indexing (~30% faster in some cases)